Fixed spacing of nav bar for mobile

--- a/main.css
+++ b/main.css
@@ -52,24 +52,17 @@ nav {
 ul {
 	list-style: none;
 	padding: 0;
-	margin: 0;
+	margin: 0 auto;
 	white-space: collapse;
+	display: flex;
+	justify-content: space-between;
+	max-width: 600px;
 }
 
 li {
 	font-size: 1.25em;
-	display: inline-block;
-	width: 22.5%;
-	text-align: center;
+	display: inline;
 	font-weight: 500;
-}
-
-li:first-child {
-	text-align: left;
-}
-
-li:last-child {
-	text-align: right;
 }
 
 .welcome {
